--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "newnewtemplate",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode development",
@@ -39,5 +38,15 @@
     "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/erik-t-irgens/NEWEST-template.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/erik-t-irgens/NEWEST-template/issues"
+  },
+  "homepage": "https://github.com/erik-t-irgens/NEWEST-template#readme",
+  "description": ""
 }
