--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "newnewtemplate",
+  "name": "supergalacticagecalculator",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode development",
-    "start": "npm run build; webpack-dev-server --open --mode development",
-    "test": "./node_modules/karma/bin/karma start karma.conf.js"
+    "start": "npm run build; webpack-dev-server --open --mode development; webpack --display-error-details",
+    "test": "./node_modules/karma/bin/karma start karma.conf.js",
+    "errorShow": "webpack --display-error-details"
   },
   "author": "",
   "license": "ISC",
@@ -41,12 +42,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/erik-t-irgens/NEWEST-template.git"
+    "url": "git+https://github.com/erik-t-irgens/super-galatic-age-calculator.git"
   },
   "keywords": [],
   "bugs": {
-    "url": "https://github.com/erik-t-irgens/NEWEST-template/issues"
+    "url": "https://github.com/erik-t-irgens/super-galatic-age-calculator/issues"
   },
-  "homepage": "https://github.com/erik-t-irgens/NEWEST-template#readme",
+  "homepage": "https://github.com/erik-t-irgens/super-galatic-age-calculator#readme",
   "description": ""
 }
